--- a/BNGW/demo.html
+++ b/BNGW/demo.html
@@ -40,5 +40,45 @@
         vào bối cảnh nhân sự cũng như tương quan lực lượng của
         cả hai bên.<span>Thẻ span - khoanh vungf 1 đoạn text</span>
 
+        <p><i>Bằng tất cả những <b>sự điên rồ</b></i>, <b>Liverpool</b> <small>đánh bại
+            ứng viên số 1 cho chức vô địch Champions League mùa này </small>-
+            ông lớn Barcelona với tỷ số 4-3 sau hai lượt trận.
+        </p>
+
+        <p>
+            <h3>Đây là thực đơn của bữa tiệc hôm nay:</h3>
+            <ol>
+                <li>Cơm rang</li>
+                <li>Tương ớt</li>
+                <li>Coca</li>
+            </ol>
+
+            <ul>
+                <li>Vodka</li>
+                <li>Chivas</li>
+                <li>
+                    <ul>
+                        <li>Nếp cái hoa vang</li>
+                        <li>Nếp cái hoa vang</li>
+                        <li>Nếp cái hoa vang</li>
+                        <li>Nếp cái hoa vang</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <dl>
+                <dt>Danh sách khách mời VIP</dt>
+                <dd>Obama</dd>
+                <dd>Trump</dd>
+                <dd>Kim</dd>
+                <dt>Danh sách khách mời bình dân</dt>
+                <dd>Lê Huy Hải</dd>
+                <dd>Nguyễn Thế Anh</dd>
+            </dl>
+        </p>
+        <a href="https://www.24h.com.vn/" target="_blank">Nhấn vào đây để lấy vé mời.</a>
+
+        Hoặc gửi vào email sau: <a href="mailto:quanghoa@gmail.com"> quanghoa@gmail.com</a><br/>
+        Hoặc gọi vào số hotline: <a href="tel:0988888888" >0988.888.888</a>
     </body>
 </html>
