--- a/BNGW/demo.html
+++ b/BNGW/demo.html
@@ -79,6 +79,9 @@
         <a href="https://www.24h.com.vn/" target="_blank">Nhấn vào đây để lấy vé mời.</a>
 
         Hoặc gửi vào email sau: <a href="mailto:quanghoa@gmail.com"> quanghoa@gmail.com</a><br/>
-        Hoặc gọi vào số hotline: <a href="tel:0988888888" >0988.888.888</a>
+        Hoặc gọi vào số hotline: <a href="tel:0988888888" >0988.888.888</a><br/>
+        <p>Đây là MC chương trình:</p>
+        <img src="ngoctrinh.jpg" />
+
     </body>
 </html>
