--- a/BNGW/demo.html
+++ b/BNGW/demo.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"/>
         <title>Day la trang demo</title>
     </head>
-    <body>
+    <body >
         <h1>Nhomm the heading...</h1>
         <h1>Heading H1</h1>
         <h2>Heading H2</h2>
@@ -76,12 +76,17 @@
                 <dd>Nguyễn Thế Anh</dd>
             </dl>
         </p>
-        <a href="https://www.24h.com.vn/" target="_blank">Nhấn vào đây để lấy vé mời.</a>
+        <a href="https://www.24h.com.vn/" target="_blank" title="Day la link lay ve">Nhấn vào đây để lấy vé mời.</a>
 
         Hoặc gửi vào email sau: <a href="mailto:quanghoa@gmail.com"> quanghoa@gmail.com</a><br/>
         Hoặc gọi vào số hotline: <a href="tel:0988888888" >0988.888.888</a><br/>
         <p>Đây là MC chương trình:</p>
-        <img src="ngoctrinh.jpg" />
+
+        <audio controls src="audio/horse.mp3" loop="true"></audio>
+
+        <video width="500" height="300" src="video/mov_bbb.mp4" controls loop="true" autoplay></video>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/M8U7PR6fQNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </body>
 </html>
