--- a/BNGW/design_layout.html
+++ b/BNGW/design_layout.html
@@ -49,6 +49,7 @@
     <footer>
         <div class="footer_section1">
             <div class="container">
+                <img width="100px" height="200px" class="ngoc-trinh-img" src="images/ngoctrinh.jpg"/>
                 <div class="block_1">
                     Block 1
                 </div>
