--- a/BNGW/design_layout.html
+++ b/BNGW/design_layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Design layout</title>
     <link rel="stylesheet" type="text/css" href="layout.css"/>
+    <link rel="stylesheet" type="text/css" href="css/all.css"/>
 </head>
 <body>
     <header>
@@ -38,9 +39,12 @@
             <div class="container">
                 <div class="block_left">
                     Left
+                    <i class="far fa-smile-beam"></i>
                 </div>
                 <div class="block_right">
-                    Right
+                    <a href="https://google.com"> <i class="fab fa-facebook-f"></i></a>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
                 </div>
             </div>
 
