--- a/BNGW/Assignment_8.html
+++ b/BNGW/Assignment_8.html
@@ -12,17 +12,24 @@
     <div class="popup">
         <h2>Coming soon</h2>
         <div class="timer">
-            <span id="day">00</span>
+            <span class="day">00</span>
             <em>:</em>
-            <span id="hour">00</span>
+            <span class="hour">00</span>
             <em>:</em>
-            <span id="min">00</span>
+            <span class="min">00</span>
             <em>:</em>
-            <span id="sec">00</span>
+            <span class="sec">00</span>
         </div>
     </div>
+    <button type="button" onclick="duplicate()">Duplicate</button>
 <script type="text/javascript">
     var d = 1;
+
+    function duplicate() {
+        var dv = document.getElementsByClassName("popup")[0];
+        var html = dv.outerHTML;
+        dv.outerHTML = html+html;
+    }
     function countdownTimer() {
         var h = 23;
         var m = 59;
@@ -31,10 +38,20 @@
             if(d <=0 && h<=0 && m<=0 && s<=0){
                 clearInterval(it);
             }
-            document.getElementById("day").innerText = d<10?"0"+d:d;
-            document.getElementById("hour").innerText = h<10?"0"+h:h;
-            document.getElementById("min").innerText = m<10?"0"+m:m;
-            document.getElementById("sec").innerText = s<10?"0"+s:s;
+            var dd = document.getElementsByClassName("day");
+            var hh = document.getElementsByClassName("hour");
+            var mm = document.getElementsByClassName("min");
+            var ss = document.getElementsByClassName("sec");
+            for (var i=0;i< dd.length;i++){
+                dd[i].innerText = d<10?"0"+d:d;
+                hh[i].innerText = h<10?"0"+h:h;
+                mm[i].innerText = m<10?"0"+m:m;
+                ss[i].innerText = s<10?"0"+s:s;
+            }
+            // document.getElementById("day").innerText = d<10?"0"+d:d;
+            // document.getElementById("hour").innerText = h<10?"0"+h:h;
+            // document.getElementById("min").innerText = m<10?"0"+m:m;
+            // document.getElementById("sec").innerText = s<10?"0"+s:s;
             s--;
             if(s<0){
                 m--;
