--- a/BNGW/demo_jquery.html
+++ b/BNGW/demo_jquery.html
@@ -74,6 +74,15 @@
 
 
         }
+
+        function show1Element() {
+            $.each($(".demo_jq"),function (k,v) {
+                if(k ==1){
+                    $(v).addClass("hahaha");
+                }
+            })
+        }
+
     </script>
 </body>
 </html>
