--- a/BNGW/bootstrap_demo.html
+++ b/BNGW/bootstrap_demo.html
@@ -6,6 +6,8 @@
     <title>Bootstrap Demo</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="css/demo_bootstrap.css"/>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
     <div class="container">
@@ -25,7 +27,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box-1 col-lg-6 col-lg-offset-4"></div>
+
             </div>
 
             <table class="table table-bordered table-striped table-hover table-responsive">
@@ -85,6 +87,92 @@
 
             </div>
         </div>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+            Launch demo modal
+        </button>
+
+        <div class="dropdown">
+            <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown trigger
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dLabel">
+                <li>No 1</li>
+                <li>No 2</li>
+                <li>No 3</li>
+            </ul>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <ul class="nav nav-tabs" id="myTabs" role="tablist">
+            <li role="presentation" class="active">
+                <a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Home</a>
+            </li>
+            <li role="presentation" class="">
+                <a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Profile</a>
+            </li>
+        </ul>
+
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade active in" role="tabpanel" id="home" aria-labelledby="home-tab">
+                Tab Home
+            </div>
+            <div class="tab-pane fade" role="tabpanel" id="profile" aria-labelledby="home-tab">
+                Tab profile
+            </div>
+        </div>
+
+        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Day la tip huong dan thi hoc ky">Tooltip on left</button>
+
+        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
+
+        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
+
+        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
+
+        <div class="col-xs-12">
+            <div class="alert alert-warning alert-dismissible fade in" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                <strong>Holy guacamole!</strong> Best check yo self, you're not looking too good.
+            </div>
+
+        </div>
+        <button type="button" id="myButton" data-loading-text="Loading..."
+                class="btn btn-primary" autocomplete="off">
+            Loading state
+        </button>
     </div>
+
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        });
+        $('#myButton').on('click', function () {
+            var $btn = $(this).button('loading');
+            // business logic...
+            setTimeout(function () {
+                $btn.button('reset');
+            },2000);
+        });
+    </script>
 </body>
 </html>
